--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-bootstrap": "^1.0.1",
     "react-device-detect": "^1.14.0",
     "react-dom": "16.13.1",
+    "react-loading-skeleton": "^2.1.1",
     "react-redux": "^7.2.0",
     "react-s-alert": "^1.4.1",
     "redux": "^4.0.5",
